--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   <form action="">
                     <div class="flex justify-center flex-col gap-8">
                       <div>
-                        <label class="block mb-1" for="">名前</label>
+                        <label class="block mb-1" for="">お名前</label>
                         <input type="text" />
                       </div>
 
