add: service sectionを追加

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                   <div class="pb-12 flex justify-center items-center">
                     <h2 class="text-center">About</h2>
                   </div>
+                  <div class="flex justify-center items-center">
+                    <p class="text-center break-keep">
+                      Webサイトを制作している<wbr />神田 勇輝と申します。<br />
+                      細かい作業が得意なので、<wbr />それを活かして仕事を行っています。<br />
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -52,6 +58,50 @@
                   <div class="pb-12 flex justify-center items-center">
                     <h2 class="text-center text-white">Service</h2>
                   </div>
+
+                  <div class="flex flex-col gap-12">
+                    <div
+                      class="flex justify-center flex-col md:flex-row w-full gap-8"
+                    >
+                      <div class="w-full md:w-3/5">
+                        <h3 class="text-white">コーディング</h3>
+                        <p class="text-white md:break-keep mt-1">
+                          HTML, CSS,
+                          JavaScriptを使ってデザインのコーディングを<wbr />行っております。<br />
+                          またお客様によってSassを使ったりTailwind CSS<wbr />などを使ったコーディングも行っております。
+                        </p>
+                      </div>
+                      <div class="w-full md:w-2/5 aspect-video overflow-hidden">
+                        <img
+                          src="/static/images/service_coding2.png"
+                          alt=""
+                          width="1200"
+                          height="1200"
+                          class="w-full h-full object-cover"
+                        />
+                      </div>
+                    </div>
+                    <div
+                      class="flex justify-center flex-col md:flex-row-reverse w-full gap-8"
+                    >
+                      <div class="w-full md:w-3/5">
+                        <h3 class="text-white">WordPress構築, 運用</h3>
+                        <p class="text-white md:break-keep mt-1">
+                          静的コーディングされたサイトのWordPress化も行っております。<br />
+                          また、プラグインを使ったカスタマイズやPHPとJavaSriptを使って<wbr />独自にWebサイトをカスタマイズすることも可能です。<br />
+                        </p>
+                      </div>
+                      <div class="w-full md:w-2/5 aspect-video overflow-hidden">
+                        <img
+                          src="/static/images/service_wordpress.png"
+                          alt=""
+                          width="1200"
+                          height="1200"
+                          class="w-full h-full object-cover"
+                        />
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -61,7 +111,7 @@
         <section>
           <div class="bg-white">
             <div class="px-4">
-              <div class="max-w-4xl mx-auto">
+              <div class="max-w-2xl mx-auto">
                 <div class="py-24">
                   <div class="pb-12 flex justify-center items-center">
                     <h2 class="text-center">Flow</h2>
@@ -245,7 +295,7 @@
         <section>
           <div class="bg-white">
             <div class="px-4">
-              <div class="max-w-4xl mx-auto">
+              <div class="max-w-2xl mx-auto">
                 <div class="py-24">
                   <div class="pb-12 flex justify-center items-center">
                     <h2 class="text-center">Contact</h2>
