fix: prettier pluginによるリファクタリング

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <main>
         <section>
           <div
-            class="flex justify-center items-center bg-no-repeat bg-cover bg-center h-[80vh]"
+            class="flex h-[80vh] items-center justify-center bg-cover bg-center bg-no-repeat"
             style="background-image: url(/static/images/kv_bg_1280.png)"
           >
             <div class="relative isolate px-6 pt-14 lg:px-8">
@@ -68,13 +68,13 @@
                     Kanda Yuki<br />
                     Portfolio
                   </h1>
-                  <p class="mt-8 text-lg leading-8 text-white break-keep">
+                  <p class="mt-8 break-keep text-lg leading-8 text-white">
                     Web制作者 神田勇輝の<wbr />ポートフォリオサイトです。
                   </p>
                   <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a
                       href="#contact"
-                      class="text-sm font-bold leading-6 text-white border-b-red-500 border-b-2"
+                      class="border-b-2 border-b-red-500 text-sm font-bold leading-6 text-white"
                       >お問い合わせはこちら <span aria-hidden="true">→</span></a
                     >
                   </div>
@@ -87,16 +87,26 @@
         <section>
           <div class="bg-white">
             <div class="px-4">
-              <div class="max-w-4xl mx-auto">
+              <div class="mx-auto max-w-2xl">
                 <div class="py-24">
-                  <div class="pb-12 flex justify-center items-center">
+                  <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center">About</h2>
                   </div>
-                  <div class="flex justify-center items-center">
-                    <p class="text-center break-keep">
+                  <div class="flex items-center justify-center">
+                    <p class="break-keep text-center">
                       Webサイトを制作している<wbr />神田 勇輝と申します。<br />
                       細かい作業が得意なので、<wbr />それを活かして仕事を行っています。<br />
                     </p>
+                  </div>
+                  <div class="mt-12 flex">
+                    <div class="w-60">
+                      <img
+                        src="/static/images/logo_kand4y.png"
+                        alt=""
+                        width="1080"
+                        height="1080"
+                      />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -107,51 +117,51 @@
         <section>
           <div class="bg-gray">
             <div class="px-4">
-              <div class="max-w-4xl mx-auto">
+              <div class="mx-auto max-w-4xl">
                 <div class="py-24">
-                  <div class="pb-12 flex justify-center items-center">
+                  <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center text-white">Service</h2>
                   </div>
 
                   <div class="flex flex-col gap-12">
                     <div
-                      class="flex justify-center flex-col md:flex-row w-full gap-8"
+                      class="flex w-full flex-col justify-center gap-8 md:flex-row"
                     >
                       <div class="w-full md:w-3/5">
                         <h3 class="text-white">コーディング</h3>
-                        <p class="text-white md:break-keep mt-1">
+                        <p class="mt-1 text-white md:break-keep">
                           HTML, CSS,
                           JavaScriptを使ってデザインのコーディングを<wbr />行っております。<br />
                           またお客様によってSassを使ったりTailwind CSS<wbr />などを使ったコーディングも行っております。
                         </p>
                       </div>
-                      <div class="w-full md:w-2/5 aspect-video overflow-hidden">
+                      <div class="aspect-video w-full overflow-hidden md:w-2/5">
                         <img
                           src="/static/images/service_coding2.png"
                           alt=""
                           width="1200"
                           height="1200"
-                          class="w-full h-full object-cover"
+                          class="h-full w-full object-cover"
                         />
                       </div>
                     </div>
                     <div
-                      class="flex justify-center flex-col md:flex-row-reverse w-full gap-8"
+                      class="flex w-full flex-col justify-center gap-8 md:flex-row-reverse"
                     >
                       <div class="w-full md:w-3/5">
                         <h3 class="text-white">WordPress構築, 運用</h3>
-                        <p class="text-white md:break-keep mt-1">
+                        <p class="mt-1 text-white md:break-keep">
                           静的コーディングされたサイトのWordPress化も行っております。<br />
                           また、プラグインを使ったカスタマイズやPHPとJavaSriptを使って<wbr />独自にWebサイトをカスタマイズすることも可能です。<br />
                         </p>
                       </div>
-                      <div class="w-full md:w-2/5 aspect-video overflow-hidden">
+                      <div class="aspect-video w-full overflow-hidden md:w-2/5">
                         <img
                           src="/static/images/service_wordpress.png"
                           alt=""
                           width="1200"
                           height="1200"
-                          class="w-full h-full object-cover"
+                          class="h-full w-full object-cover"
                         />
                       </div>
                     </div>
@@ -165,25 +175,25 @@
         <section>
           <div class="bg-white">
             <div class="px-4">
-              <div class="max-w-2xl mx-auto">
+              <div class="mx-auto max-w-2xl">
                 <div class="py-24">
-                  <div class="pb-12 flex justify-center items-center">
+                  <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center">Flow</h2>
                   </div>
 
-                  <div class="flex justify-center items-center pb-12">
-                    <p class="text-center break-keep">
+                  <div class="flex items-center justify-center pb-12">
+                    <p class="break-keep text-center">
                       以下はWebサイトを制作する<wbr />手順になります。
                     </p>
                   </div>
 
                   <div>
                     <ul
-                      class="flex justify-center items-center flex-wrap gap-8"
+                      class="flex flex-wrap items-center justify-center gap-8"
                     >
                       <li class="flex flex-col justify-center">
                         <span
-                          class="flex justify-center items-center w-20 h-20"
+                          class="flex h-20 w-20 items-center justify-center"
                         >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -205,7 +215,7 @@
                       </li>
                       <li class="flex flex-col justify-center">
                         <span
-                          class="flex justify-center items-center w-20 h-20"
+                          class="flex h-20 w-20 items-center justify-center"
                         >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -227,7 +237,7 @@
                       </li>
                       <li class="flex flex-col justify-center">
                         <span
-                          class="flex justify-center items-center w-20 h-20"
+                          class="flex h-20 w-20 items-center justify-center"
                         >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -249,7 +259,7 @@
                       </li>
                       <li class="flex flex-col justify-center">
                         <span
-                          class="flex justify-center items-center w-20 h-20"
+                          class="flex h-20 w-20 items-center justify-center"
                         >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -271,7 +281,7 @@
                       </li>
                       <li class="flex flex-col justify-center">
                         <span
-                          class="flex justify-center items-center w-20 h-20"
+                          class="flex h-20 w-20 items-center justify-center"
                         >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -302,15 +312,15 @@
         <section>
           <div class="bg-gray">
             <div class="px-4">
-              <div class="max-w-2xl mx-auto">
+              <div class="mx-auto max-w-2xl">
                 <div class="py-24">
-                  <div class="pb-12 flex justify-center items-center">
+                  <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center text-white">Achievements</h2>
                   </div>
                   <div>
                     <ul>
-                      <li class="py-8 border-b border-white last:border-none">
-                        <h3 class="text-white mb-1">
+                      <li class="border-b border-white py-8 last:border-none">
+                        <h3 class="mb-1 text-white">
                           20サイト以上の制作実績あり
                         </h3>
                         <p class="text-white">
@@ -320,8 +330,8 @@
                           ECサイトの構築など、様々なサイトを作ってまいりました。
                         </p>
                       </li>
-                      <li class="py-8 border-b border-white last:border-none">
-                        <h3 class="text-white mb-1">
+                      <li class="border-b border-white py-8 last:border-none">
+                        <h3 class="mb-1 text-white">
                           大規模コーポレートサイトの作成
                         </h3>
                         <p class="text-white">
@@ -330,8 +340,8 @@
                           カスタマイズまでを担当いたしました。
                         </p>
                       </li>
-                      <li class="py-8 border-b border-white last:border-none">
-                        <h3 class="text-white mb-1">
+                      <li class="border-b border-white py-8 last:border-none">
+                        <h3 class="mb-1 text-white">
                           Shopifyのオリジナルテーマの作成
                         </h3>
                         <p class="text-white">
@@ -349,32 +359,32 @@
         <section id="contact">
           <div class="bg-white">
             <div class="px-4">
-              <div class="max-w-2xl mx-auto">
+              <div class="mx-auto max-w-2xl">
                 <div class="py-24">
-                  <div class="pb-12 flex justify-center items-center">
+                  <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center">Contact</h2>
                   </div>
 
                   <form action="">
-                    <div class="flex justify-center flex-col gap-8">
+                    <div class="flex flex-col justify-center gap-8">
                       <div>
-                        <label class="block mb-1" for="">お名前</label>
+                        <label class="mb-1 block" for="">お名前</label>
                         <input type="text" />
                       </div>
 
                       <div>
-                        <label class="block mb-1" for="">メールアドレス</label>
+                        <label class="mb-1 block" for="">メールアドレス</label>
                         <input type="text" />
                       </div>
 
                       <div>
-                        <label class="block mb-1" for=""
+                        <label class="mb-1 block" for=""
                           >お問い合わせ内容</label
                         >
                         <textarea name="" id="" rows="10"></textarea>
                       </div>
                     </div>
-                    <div class="pt-12 flex justify-center items-center">
+                    <div class="flex items-center justify-center pt-12">
                       <input type="submit" value="送信" />
                     </div>
                   </form>
@@ -389,7 +399,7 @@
         <div class="bg-gray">
           <div class="px-4">
             <div class="py-12">
-              <div class="flex justify-center items-center">
+              <div class="flex items-center justify-center">
                 <small class="text-white">&copy; kand4y.</small>
               </div>
             </div>
