--- a/index.html
+++ b/index.html
@@ -98,14 +98,68 @@
                       細かい作業が得意なので、<wbr />それを活かして仕事を行っています。<br />
                     </p>
                   </div>
-                  <div class="mt-12 flex">
-                    <div class="w-60">
-                      <img
-                        src="/static/images/logo_kand4y.png"
-                        alt=""
-                        width="1080"
-                        height="1080"
-                      />
+                  <div
+                    class="mt-12 flex flex-col items-center justify-center gap-8 md:flex-row"
+                  >
+                    <div
+                      class="flex w-full items-center justify-center md:w-1/2"
+                    >
+                      <div class="w-60">
+                        <img
+                          src="/static/images/logo_kand4y.png"
+                          alt=""
+                          width="1080"
+                          height="1080"
+                        />
+                      </div>
+                    </div>
+                    <div
+                      class="flex w-full flex-col items-center md:w-1/2 md:items-start"
+                    >
+                      <h3>神田 勇輝</h3>
+                      <p>1997年7月15日生まれ</p>
+                      <br />
+                      <p class="font-bold">スキル一覧</p>
+                      <p class="text-center md:text-left">
+                        HTML / CSS / Sass / Tailwind CSS / JavaScript /<br
+                          class="md:hidden"
+                        />
+                        PHP / WordPress / TypeScript
+                      </p>
+                      <br />
+                      <p class="font-bold">SNS</p>
+                      <ul class="list-disc pl-4">
+                        <li class="py-1">
+                          <a
+                            href="https://twitter.com/kand4y"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="border-b-2 border-b-red-500"
+                          >
+                            Twitter
+                          </a>
+                        </li>
+                        <li class="py-1">
+                          <a
+                            href="https://www.instagram.com/kand4y/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="border-b-2 border-b-red-500"
+                          >
+                            Instagram
+                          </a>
+                        </li>
+                        <li class="py-1">
+                          <a
+                            href="https://github.com/kand4y"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="border-b-2 border-b-red-500"
+                          >
+                            GitHub
+                          </a>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -363,6 +417,12 @@
                 <div class="py-24">
                   <div class="flex items-center justify-center pb-12">
                     <h2 class="text-center">Contact</h2>
+                  </div>
+
+                  <div class="flex items-center justify-center pb-12">
+                    <p class="break-keep text-center">
+                      まずは気軽にご相談ください。
+                    </p>
                   </div>
 
                   <form action="">
