--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       class="flex w-full flex-col items-center md:w-1/2 md:items-start"
                     >
                       <h3>神田 勇輝</h3>
-                      <p>1997年7月15日生まれ</p>
+                      <p>Web制作歴2年以上</p>
                       <br />
                       <p class="font-bold">スキル一覧</p>
                       <p class="text-center md:text-left">
